--- a/Informe.tex
+++ b/Informe.tex
@@ -53,7 +53,7 @@
             \vspace*{0.3in}
             \begin{Large}
                 \textbf{INFORME DE LABORATORIO N°01}\\
-                \textbf{“VISUALIZACION DE DATOS CON TABLEAU}\\
+                \textbf{``VISUALIZACION DE DATOS CON TABLEAU"}\\
             \end{Large}
             \vspace*{0.2in}
             \begin{Large}
@@ -329,7 +329,7 @@
         \begin{center}
             \includegraphics[width=15cm]{./img/img33.png}
         \end{center}
-        \item Arrastre \textit{\textbf{Region}} a la estantería \textit{\textbf{Filters}}.
+        \item Arrastre \textit{\textbf{Region}} a la estanteria \textit{\textbf{Filters}}.
         \begin{center}
             \includegraphics[width=15cm]{./img/img34.png}
         \end{center}
